--- a/oura/templates/index.html
+++ b/oura/templates/index.html
@@ -1,1 +1,25 @@
-<h1>index page</h1>
+{% extends "base.html" %}
+
+{% block title %}Sleep Tracking{% endblock %}
+{% block head %}
+    {{ super() }}
+    <style type="text/css">.important { color: #336699; }</style>
+{% endblock %}
+
+{% block content %}
+
+    <h1>Simple Sidebar</h1>
+    <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+    <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+    <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+
+    <!-- Menu Toggle Script -->
+    <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
+
+{% endblock %}
+
