--- a/app/static/style.css
+++ b/app/static/style.css
@@ -64,13 +64,18 @@
     color: #999999;
 }
 
+.sidebar-nav li a:active{
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #fff;
     background: rgba(255,255,255,0.2);
 }
 
-.sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
 }
