--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/guide/">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -30,7 +30,7 @@
       <!-- Posts -->
       <p>Guides</p>
       <ul>
-          {% for post in site.posts %}
+          {% for post in site.posts reversed %}
             <li>
               <a href="{{ post.url }}">{{ post.title }}</a>
             </li>
