--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,18 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="public/apple-touch-icon-144-precomposed.png">
                                 <link rel="shortcut icon" href="public/favicon.ico">
 
+<!-- Meta info (trying to fix facebook OG image error)  -->
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="article">
+<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+<meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+<meta property="og:url" content="{{ site.url }}{{ page.url }}">
+<meta property="og:site_name" content="{{ site.title }}">
+<meta property="og:image" content="{{ site.url }}/assets/orizaba.jpeg">
+
+<meta property="og:image:width" content="637" />
+<meta property="og:image:height" content="403" />
+
 
   {% include head.html %}
 
