--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:site_name" content="{{ site.title }}">
-<meta property="og:image" content="{{ site.url }}/assets/orizaba.jpeg">
+<meta property="og:image" content="{{ site.url }}assets/orizaba.jpeg">
 
 <meta property="og:image:width" content="637" />
 <meta property="og:image:height" content="403" />
